--- a/Seguranca/WebContent/menuSistemas.html
+++ b/Seguranca/WebContent/menuSistemas.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html>
+<html lang="en" ng-app="menuModule">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<title>Segurança - Menu de Sistemas</title>
+
+
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+<script src="js/angular.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="control/menuControl.js"></script>
+
 </head>
-<body>
-Meu Titulo
+<body ng-controller="menuController">
+
+	<table class="table table-hover">
+
+		<th>Menu de Sistemas disponiveis ERP</th>
+
+		<tr ng-repeat="sistema in sistemas">
+
+			<td><a href={{sistema.url}}>{{sistema.nome}}</a></td>
+	</table>
+
+
 </body>
+
 </html>
