--- a/Seguranca/WebContent/menuSistemas.html
+++ b/Seguranca/WebContent/menuSistemas.html
@@ -23,7 +23,11 @@
 		<tr ng-repeat="sistema in sistemas">
 
 			<td><a href={{sistema.url}}>{{sistema.nome}}</a></td>
+			
+			
 	</table>
+	
+	<button type="button" class="btn btn-default" ng-click="logout()">Logout</button>
 
 
 </body>
